# bk8

./: .gitignore  BETTING_CHEATSHEET.md  CLAUDE.md  CourtEdge_PRD.md  README.md  package.json
.github/workflows/: deploy.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8ed6dd1951d5_initial_schema_10_tables.py  b87ffd7f286a_add_system_aligned_to_bets.py  c27ff144fa18_create_market_snapshots_table.py
backend/app/: config.py  main.py
backend/app/analytics/: __init__.py  edge_calculator.py  lineup_adjustment.py  prediction_model.py  schedule_engine.py
backend/app/api/v1/: bets.py  games.py  injuries.py  results.py  router.py  simulation.py  teams.py
backend/app/connectors/: __init__.py  base.py  injuries.py  nba_api.py  pbpstats.py  polymarket.py
backend/app/models/: __init__.py  database.py  tables.py
backend/app/schemas/: __init__.py  bet.py  game.py  market.py  prediction.py  team.py
backend/app/services/: __init__.py  market_store.py  pipeline.py  prediction_store.py  scheduler.py  validation.py
backend/tests/: conftest.py
backend/tests/analytics/: test_edge_calculator.py  test_lineup_adjustment.py  test_prediction_model.py  test_validation.py
backend/tests/api/: test_endpoints.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BetLogModal.tsx  EmptyState.tsx  GameCard.tsx  Header.tsx  TopEdges.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: api.ts
(+4 files in other folders)
